@startuml Coconut Architecture

!define INTERFACE_COLOR #B8E6B8
!define CONCRETE_COLOR #E6E6FA

skinparam backgroundColor white
skinparam classBackgroundColor CONCRETE_COLOR
skinparam interfaceBackgroundColor INTERFACE_COLOR
skinparam classBorderColor #333333
skinparam interfaceBorderColor #333333

' Interfaces
interface CryptoStrategy <<interface>> {
  +Encrypt(key []byte, plaintext string) (string, error)
  +Decrypt(key []byte, ciphertext string) (string, error)
}

interface DB <<interface>> {
  +Put(bucket, key string, value []byte) error
  +Get(bucket, key string) ([]byte, error)
  +Delete(bucket, key string) error
  +ListKeys(bucket string) ([]string, error)
  +CreateBucket(bucket string) error
  +Close() error
}

interface Repository <<interface>> {
  +Put(key string, value []byte) error
  +Get(key string) ([]byte, error)
  +Delete(key string) error
  +ListKeys() ([]string, error)
}

interface SecretRepository <<interface>> {
  +Add(secret Secret) (string, error)
  +Get(key string) (*Secret, error)
  +Update(secret Secret) error
  +Delete(key string) error
  +List() ([]Secret, error)
}

' Concrete Implementations
class AESGCM {
  +Encrypt(key []byte, plaintext string) (string, error)
  +Decrypt(key []byte, ciphertext string) (string, error)
}

class BoltStore {
  -db *bolt.DB
  +Put(bucket, key string, value []byte) error
  +Get(bucket, key string) ([]byte, error)
  +Delete(bucket, key string) error
  +ListKeys(bucket string) ([]string, error)
  +CreateBucket(bucket string) error
  +Close() error
}

class BaseRepository {
  -db DB
  -bucket string
  +Put(key string, value []byte) error
  +Get(key string) ([]byte, error)
  +Delete(key string) error
  +ListKeys() ([]string, error)
}

class EncryptedRepository {
  -repo Repository
  -vault *Vault
  -bucket string
  +Add(secret Secret) (string, error)
  +Get(key string) (*Secret, error)
  +Update(secret Secret) error
  +Delete(key string) error
  +List() ([]Secret, error)
}

' Core Components
class Vault {
  -strategy CryptoStrategy
  -key []byte
  -salt []byte
  -unlocked bool
  +Unlock(derivedKey []byte)
  +Lock()
  +IsUnlocked() bool
  +Encrypt(plaintext string) (string, error)
  +Decrypt(ciphertext string) (string, error)
  +CreateVerificationToken() (string, error)
  +VerifyPassword(encryptedToken string) error
}

class Factory {
  +IO *IOStreams
  +Logger *Logger
  +Config *Config
  +DB DB
  +Vault *Vault
  +Crypto CryptoStrategy
  +Repo *RepositoryFactory
  +System Repository
  +Secrets SecretRepository
  +Session *Manager
  +Close()
}

class Manager {
  -repo Repository
  -cfg *Config
  +CreateSession(vaultKey []byte) error
  +IsValid() bool
  +UpdateActivity() error
  +GetCachedKey() ([]byte, error)
  +Clear() error
  +GetRemainingTime() time.Duration
}

class RepositoryFactory {
  -db DB
  -vault *Vault
  -systemBucket string
  -secretsBucket string
  +NewBaseRepository(bucket string) Repository
  +NewEncryptedRepository(bucket string) SecretRepository
  +SetVault(v *Vault)
}

' Relationships - Interface Implementations
CryptoStrategy <|.. AESGCM : implements
DB <|.. BoltStore : implements
Repository <|.. BaseRepository : implements
SecretRepository <|.. EncryptedRepository : implements

' Relationships - Composition
Vault *-- CryptoStrategy : uses
EncryptedRepository *-- Repository : wraps
EncryptedRepository *-- Vault : uses
BaseRepository *-- DB : uses
Manager *-- Repository : uses

' Relationships - Factory
Factory *-- DB : creates
Factory *-- Vault : creates
Factory *-- CryptoStrategy : creates
Factory *-- Repository : creates
Factory *-- SecretRepository : creates
Factory *-- Manager : creates
Factory *-- RepositoryFactory : creates

RepositoryFactory *-- DB : uses
RepositoryFactory *-- Vault : uses

' Notes
note right of CryptoStrategy
  Strategy Pattern:
  Allows swapping encryption
  algorithms at runtime
end note

note right of Repository
  Repository Pattern:
  Abstracts storage operations
  for easy testing and swapping
end note

note bottom of EncryptedRepository
  Decorator Pattern:
  Adds transparent encryption
  to base repository
end note

note left of Factory
  Factory Pattern:
  Centralized dependency
  injection and lifecycle
  management
end note

@enduml
